add tecnologias page

--- a/views/tec.mustache
+++ b/views/tec.mustache
@@ -6,56 +6,87 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0 , maximum-scale=1.0">
   <title>Tecnologias</title>
   <link rel="icon" href="/images/logo-header.png" type="image/x-icon">
-  <link rel="stylesheet" href="/stylesheets/tec.css" />
+  <link rel="stylesheet" href="/stylesheets/tecnologias.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 </style>
+
 <body>
   <header>
     <nav>
       <div class="nav-container">
         <div class="img-logo"></div>
         <div class="div-links">
-          <a class="texto-mid-page" href="/home">Home</a>
-          <a class="texto-mid-page" href="/about">Sobre</a>
-          <a class="texto-mid-page" href="/tec">Tecnologias</a>
-          <a class="texto-mid-page" href="/contact">Contato</a>
+            <a class="texto-mid-page" href="/home">Home</a>
+            <a class="texto-mid-page" href="/about">Sobre</a>
+            <a class="texto-mid-page" href="/tec">Tecnologias</a>
+            <a class="texto-mid-page" href="/contact">Contato</a>
         </div>
       </div>
     </nav>
   </header>
-  <section class="container-formulario" style="text-align: center;">
-    <h1>TECNOLOGIAS USADAS</h1>
-    <div class="tecnologia">
-      <h2>Node</h2>
-      <p>Ambiente de execução JavaScript no lado do servidor, que permite construir aplicativos de rede e web usando JavaScript.</p>
-    </div>
 
-    <div class="tecnologia">
-      <h2>Nodemon</h2>
-      <p>Ferramenta de desenvolvimento para Node.js que reinicia automaticamente o servidor sempre que há alterações nos arquivos do projeto.</p>
-    </div>
+    <section class="container">
+      <div class="divTec">
+        <img class="imgTec" src="../images/node.png" alt="...">
+        <p>
+          Node.js é um ambiente de execução de JavaScript que permite desenvolver aplicativos do lado do servidor. Seu
+          principal objetivo é possibilitar a construção de servidores eficientes e escaláveis, utilizando uma única linguagem
+          de programação em toda a aplicação.
+        </p>
+      </div>
+      <div class="divTec">
+        <img id= "imgMustache" class="imgTec" src="../images/mustache.png" alt="...">
+        <p>
+          Mustache é uma view engine que permite a separação clara entre lógica e apresentação em aplicativos web. Ele utiliza um modelo simples de substituição de tags para renderizar dinamicamente os dados em templates HTML.
+        </p>
+      </div>
+      <div class="divTec">
+        <img class="imgTec" src="../images/express.png" alt="...">
+        <p>
+          Express.js é um framework web para Node.js que simplifica o desenvolvimento de aplicativos web.
+        </p>
+      </div>
+      
+      <div class="divTec">
+        <img class="imgTec" src="../images/mongodb.png" alt="...">
+        <p>
+          MongoDB é um banco de dados NoSQL de alto desempenho e orientado a documentos, que oferece escalabilidade e flexibilidade para armazenar e gerenciar dados.
+        </p>
+      </div>
+      <div class="divTec">
+        <img class="imgTec" src="../images/nodemon.png" alt="...">
+        <p>
+          Nodemon é uma ferramenta de desenvolvimento para Node.js que reinicia automaticamente o servidor sempre que ocorrem alterações no código, permitindo um fluxo de desenvolvimento mais eficiente.
+        </p>
+      </div>
+      <div class="divTec">
+        <img class="imgTec" src="../images/javascript.png" alt="...">
+        <p>
+          Linguagem de programação para tornar páginas web interativas e desenvolver aplicativos do cliente e do servidor.
+        </p>
+      </div>
+      <div class="divTec">
+        <img class="imgTec" src="../images/css.png" alt="...">
+        <p>
+          CSS é a linguagem de estilo usada para estilizar páginas web, permitindo definir a aparência dos elementos HTML. Com
+          o CSS, é possível controlar cores, fontes, espaçamento e outros atributos visuais, criando páginas web visualmente
+          atraentes e personalizadas.
+        </p>
+      </div>
+      <div class="divTec">
+        <img class="imgTec" src="../images/github.png" alt="...">
+        <p>
+          Plataforma de hospedagem de código para controle de versão e colaboração em projetos de software.
+        </p>
+      </div>
+    </section>
 
-    <div class="tecnologia">
-      <h2>Express</h2>
-      <p>Framework web minimalista e rápido para Node.js, que fornece recursos essenciais para construir APIs e aplicativos web robustos.</p>
-    </div>
-
-    <div class="tecnologia">
-      <h2>Mustache</h2>
-      <p>Sistema de templates lógicos simples e flexível para renderizar dados dinâmicos em vários formatos</p>
-    </div>
-
-    <div class="tecnologia">
-      <h2>Nodemailer</h2>
-      <p>Biblioteca para Node.js que facilita o envio de e-mails, oferecendo uma interface simples e configurável para criar e enviar mensagens de e-mail.</p>
-    </div>
-
-  </section>
-  <footer>
-    <a class="texto-end-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-  </footer>
+    <footer>
+        <div></div>
+    </footer>
 </body>
 </html>
