--- a/public/stylesheets/tec.css
+++ b/public/stylesheets/tec.css
@@ -1,150 +1,80 @@
-* {
+*{
     margin: 0;
-    padding: 0;
-    border: 0;
-    font-family: 'Poppins', sans-serif;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    background-color: #F1DEC9;
-}
-
-.nav-container {
+.CabecalhoHome {
+    font-family: 'Averia Libre';
+    background-color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border: 10px solid black;
+  }
+
+.logo {
+    width: 300px;
+    margin-bottom: 12px;
+
 }
 
-.img-logo {
-    background-image: url("../images/logo-header.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 100px;
-    height: 80px;
+.linha-amarela {
+    height: 4.5px;
+    background-color: #D4AF37;
 }
 
-header {
-    background-color: #8B4513;
-    color: #fff;
-    padding: 10px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    border-bottom: #000000 solid 3px;
-    z-index: 1;
-}
-
-nav a {
-    display: inline;
-    margin-right: 60px;
-    color: #ffffff;
-    text-decoration: none;
-}
-
-section {
-    text-align: center;
-    margin: 20px;
-}
-
-.color-palette {
+nav ul {
     display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
 }
 
-.color {
-    width: 100px;
-    height: 100px;
+nav ul li a {
+    text-decoration: none;
+    color: #D4AF37;
+    padding: 20px;
+    font-family: 'Arial', sans-serif;
+    font-weight: bold;
+    font-size: 17px;
 }
 
-.container-formulario h1 {
-    margin-top: 0;
-    margin-bottom: 20px;
-}
-
-.container-formulario label,
-.container-formulario input[type="text"],
-.container-formulario input[type="password"],
-.container-formulario input[type="submit"] {
-    display: block;
+.MainSobre {
+    max-width: 1000px;
+    margin: 0 auto;
+    margin-top: 10px;
     margin-bottom: 10px;
-}
+    
+  }
 
-.container-formulario input[type="submit"] {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-}
-
-footer {
-    background-color: #8B4513;
-    color: #fff;
-    padding: 3px;
+.sobre1,
+.sobre2,
+.sobre3,
+.sobre4 {
+    text-decoration: none;
+    color: black;
+    font-family: 'Arial', sans-serif;
+    font-weight: bold;
+    font-size: 17px;
     text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 18.2px;
+}
+
+.imageSobre {
+    width: 90px;
+    height: 90px;
+    display:flex;
+    margin-right: 20px;
+}
+
+footer{
+    font-family: 'Averia Libre';
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 10px solid black;
+    height: 39px;
     position: fixed;
     bottom: 0;
-    left: 0;
     width: 100%;
-    border-top: #000000 solid 3px;
-    z-index: 1;
-}
-
-.texto-mid-page,
-.texto-end-page {
-    text-align: center;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.texto-mid-page:hover,
-.texto-end-page:hover {
-    color: rgb(0, 0, 0);
-    transform: scale(1.3);
-}
-
-.container-formulario {
-    display: flex;
-    padding: 20px;
-    border: 1px solid #ccc;
-    background-color: #f2f2f2;
- 
-    margin-top: 240px;
-    margin-bottom: 240px;
-}
-
-.tecnologia {
-    width: 300px;
-    padding: 20px;
-    margin: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    
-}
-
-.tecnologia h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.tecnologia p {
-    font-size: 16px;
-    margin-bottom: 0;
 }
