--- a/views/tecnologias.mustache
+++ b/views/tecnologias.mustache
@@ -21,9 +21,9 @@
         <div class="img-logo"></div>
         <div class="div-links">
             <a class="texto-mid-page" href="/home">Home</a>
-            <a class="texto-mid-page" href="/about">Sobre</a>
-            <a class="texto-mid-page" href="/tec">Tecnologias</a>
-            <a class="texto-mid-page" href="/contact">Contato</a>
+            <a class="texto-mid-page" href="/sobre">Sobre</a>
+            <a class="texto-mid-page" href="/tecnologias">Tecnologias</a>
+            <a class="texto-mid-page" href="/contato">Contato</a>
         </div>
       </div>
     </nav>
@@ -41,7 +41,8 @@
       <div class="divTec">
         <img id= "imgMustache" class="imgTec" src="../images/mustache.png" alt="...">
         <p>
-          Mustache é uma view engine que permite a separação clara entre lógica e apresentação em aplicativos web. Ele utiliza um modelo simples de substituição de tags para renderizar dinamicamente os dados em templates HTML.
+          Mustache é uma view engine que permite a separação clara entre lógica e apresentação em aplicativos web. 
+          Ele utiliza um modelo simples de substituição de tags para renderizar dinamicamente os dados em templates HTML.
         </p>
       </div>
       <div class="divTec">
@@ -60,7 +61,8 @@
       <div class="divTec">
         <img class="imgTec" src="../images/nodemon.png" alt="...">
         <p>
-          Nodemon é uma ferramenta de desenvolvimento para Node.js que reinicia automaticamente o servidor sempre que ocorrem alterações no código, permitindo um fluxo de desenvolvimento mais eficiente.
+          Nodemon é uma ferramenta de desenvolvimento para Node.js que reinicia automaticamente o servidor sempre que ocorrem alterações no código, 
+          permitindo um fluxo de desenvolvimento mais eficiente.
         </p>
       </div>
       <div class="divTec">
@@ -88,5 +90,6 @@
     <footer>
         <div></div>
     </footer>
+      
 </body>
 </html>
