--- a/views/contato.mustache
+++ b/views/contato.mustache
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 , maximum-scale=1.0">
-  <title>Contact</title>
+  <title>Contato</title>
   <link rel="icon" href="/images/logo-header.png" type="image/x-icon">
-  <link rel="stylesheet" href="/stylesheets/contact.css" />
+  <link rel="stylesheet" href="/stylesheets/contato.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
@@ -23,9 +23,9 @@
         <div class="img-logo"></div>
         <div class="div-links">
             <a class="texto-mid-page" href="/home">Home</a>
-            <a class="texto-mid-page" href="/about">Sobre</a>
-            <a class="texto-mid-page" href="/tec">Tecnologias</a>
-            <a class="texto-mid-page" href="/contact">Contato</a>
+            <a class="texto-mid-page" href="/sobre">Sobre</a>
+            <a class="texto-mid-page" href="/tecnologias">Tecnologias</a>
+            <a class="texto-mid-page" href="/contato">Contato</a>
         </div>
       </div>
     </nav>
