--- a/views/home.mustache
+++ b/views/home.mustache
@@ -24,9 +24,9 @@
         
         <div class="div-links">
             <a class="texto-mid-page" href="/home">Home</a>
-            <a class="texto-mid-page" href="/about">Sobre</a>
-            <a class="texto-mid-page" href="/tec">Tecnologias</a>
-            <a class="texto-mid-page" href="/contact">Contato</a>
+            <a class="texto-mid-page" href="/sobre">Sobre</a>
+            <a class="texto-mid-page" href="/tecnologias">Tecnologias</a>
+            <a class="texto-mid-page" href="/contato">Contato</a>
             <a style="background-color:red; width: 10%; height: 1%" class="texto-mid-page" href="/">Sair</a>
         </div>
       </div>
