--- a/views/sobre.mustache
+++ b/views/sobre.mustache
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 , maximum-scale=1.0">
-  <title>About</title>
+  <title>Sobre</title>
   <link rel="icon" href="/images/logo-header.png" type="image/x-icon">
-  <link rel="stylesheet" href="/stylesheets/about.css" />
+  <link rel="stylesheet" href="/stylesheets/sobre.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
@@ -23,16 +23,22 @@
         <div class="img-logo"></div>
         <div class="div-links">
             <a class="texto-mid-page" href="/home">Home</a>
-            <a class="texto-mid-page" href="/about">Sobre</a>
-            <a class="texto-mid-page" href="/tec">Tecnologias</a>
-            <a class="texto-mid-page" href="/contact">Contato</a>
+            <a class="texto-mid-page" href="/sobre">Sobre</a>
+            <a class="texto-mid-page" href="/tecnologias">Tecnologias</a>
+            <a class="texto-mid-page" href="/contato">Contato</a>
         </div>
       </div>
     </nav>
   </header>
 
-  <section class="container-formulario" style="text-align: center;">
-    <H1>SOBRE</H1>
+  <section class="container">
+    <div class="div-container">
+        <img src="../images/logo-header.png" alt="">
+        <p>
+          Petweb é um site que possibilita aos colaboradores da clínica veterinária realizarem o gerenciamento de seus clientes e respectivos pets no que diz respeito
+          ao agendamento de visitas a clínica, seja para realizar uma consulta, ou até mesmo dar um banho ou tosa em seu bichinho!
+        </p>
+    </div>
   </section>
 
   <footer>
