add crud colaborador

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="icon" href="/images/logo-header.png" type="image/x-icon">
-    <link rel="stylesheet" href="/stylesheets/index.css" />
+    <link rel="stylesheet" href="/stylesheets/login.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
@@ -28,6 +28,7 @@
           <br>
           <input id='btn-entrar' type="submit" value="Entrar" style="display: block; margin: 0 auto; background-color: #A0522D;  border-radius: 20px;">
         </form>
+        <a class ="criarConta" href="/criarConta">Criar conta</a>
       </section>
     </div>
   </div>
