--- a/public/stylesheets/sobre.css
+++ b/public/stylesheets/sobre.css
@@ -54,7 +54,7 @@ nav a {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -67,12 +67,13 @@ nav a {
   
   p {
     flex-grow: 1;
+    font-size: 28px;
   }
   
 
 img{
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 500px;
     margin-right: 20px;
 }
 
