--- a/views/login.mustache
+++ b/views/login.mustache
@@ -19,12 +19,12 @@
     <div class="right-section">
       <section class="container-formulario">
         <h2 id="formtitle">Login</h2>
-        <form action="/home" method="GET">
+        <form action="/login/loginColaborador" method="POST">
           <label for="username">Email:</label>
           <input type="text" id="email" name="email" >
           <br>
           <label for="password">Senha:</label>
-          <input type="password" id="password" name="password" >
+          <input type="password" id="senha" name="senha" >
           <br>
           <input id='btn-entrar' type="submit" value="Entrar" style="display: block; margin: 0 auto; background-color: #A0522D;  border-radius: 20px;">
         </form>
