--- a/views/home.mustache
+++ b/views/home.mustache
@@ -27,7 +27,7 @@
             <a class="texto-mid-page" href="/sobre">Sobre</a>
             <a class="texto-mid-page" href="/tecnologias">Tecnologias</a>
             <a class="texto-mid-page" href="/contato">Contato</a>
-            <a style="background-color:red; width: 10%; height: 1%" class="texto-mid-page" href="/">Sair</a>
+            <a style="background-color:red; width: 10%; height: 1%" class="texto-mid-page" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
