--- a/public/stylesheets/sobre.css
+++ b/public/stylesheets/sobre.css
@@ -5,16 +5,16 @@
     font-family: 'Poppins', sans-serif;
 }
 
+
+html {
+  height: 100%;
+}
+
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    background-color: #F1DEC9
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #F1DEC9
 }
 
 
@@ -36,14 +36,9 @@ body {
   header {
     background-color: #8B4513;
     color: #fff;
-    padding: 10px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    height: 80px;
     border-bottom: #000000 solid 3px;
 }
-
 
 nav a {
     
@@ -77,16 +72,16 @@ img{
     margin-right: 20px;
 }
 
-footer {    
-    background-color: #8B4513;
-    color: #fff;
-    padding: 3px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    border-top: #000000 solid 3px;
+footer {
+  height: 30px;
+  background-color: #8B4513;
+  color: #fff;
+  border-top: #000000 solid 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
 }
+
 
 
