--- a/views/criarConta.mustache
+++ b/views/criarConta.mustache
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0 , maximum-scale=1.0">
   <title>Contato</title>
   <link rel="icon" href="/images/logo-header.png" type="image/x-icon">
-  <link rel="stylesheet" href="/stylesheets/criarconta.css" />
+  <link rel="stylesheet" href="/stylesheets/criarConta.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
