--- a/public/stylesheets/criarconta.css
+++ b/public/stylesheets/criarconta.css
@@ -5,19 +5,17 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+    min-height: 100vh;
     background-color: #F1DEC9
-
-
 }
+
 
 
 
@@ -39,11 +37,7 @@ body {
   header {
     background-color: #8B4513;
     color: #fff;
-    padding: 10px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    height: 80px;
     border-bottom: #000000 solid 3px;
 }
 
@@ -120,16 +114,14 @@ section {
 }
 
 footer {
-    
+    height: 30px;
     background-color: #8B4513;
     color: #fff;
-    padding: 3px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
     border-top: #000000 solid 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: auto;
 }
 
 
