--- a/views/home.mustache
+++ b/views/home.mustache
@@ -23,10 +23,9 @@
        <a class="texto-mid-page" href="/"><div class="img-logo"></div></a>
         
         <div class="div-links">
-            <a class="texto-mid-page" href="/home">Home</a>
-            <a class="texto-mid-page" href="/sobre">Sobre</a>
-            <a class="texto-mid-page" href="/tecnologias">Tecnologias</a>
-            <a class="texto-mid-page" href="/contato">Contato</a>
+            <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
+            <a class="texto-mid-page" href="/pets">Pets</a>
+            <a class="texto-mid-page" href="/perfil">Perfil</a>
             <a style="background-color:red; width: 10%; height: 1%" class="texto-mid-page" href="/logout">Sair</a>
         </div>
       </div>
