--- a/views/sobre.mustache
+++ b/views/sobre.mustache
@@ -33,7 +33,7 @@
 
   <section class="container">
     <div class="div-container">
-        <img src="../images/logo-header.png" alt="">
+        <img id="img-sobre" src="../images/logo-header.png" alt="">
         <p>
           Petweb é um site que possibilita aos colaboradores da clínica veterinária realizarem o gerenciamento de seus clientes e respectivos pets no que diz respeito
           ao agendamento de visitas a clínica, seja para realizar uma consulta, ou até mesmo dar um banho ou tosa em seu bichinho!
