--- a/views/contato.mustache
+++ b/views/contato.mustache
@@ -32,8 +32,9 @@
   </header>
 
  <section class="container-formulario">
-   <h2 id="formtitle">Entre em contato</h2>
-  <form action="/email" method="POST" style="max-width: 400px; margin: 0 auto;">
+  
+  <form action="/email" method="POST">
+    <h2 id="formtitle">Entre em contato</h2>
     <div style="margin-bottom: 10px;">
       <label for="nome">Nome:</label>
       <input type="text" id="nome" name="nome" style="width: 100%;" required>
@@ -47,7 +48,7 @@
       <input type="text" id="assunto" name="assunto" style="width: 100%;" required>
     </div>
     <div style="margin-bottom: 10px;">
-      <label for="mensagem">Mensagem:</label>
+      <label for="mensagem">Mensagem ou Sugestão:</label>
       <textarea id="mensagem" name="mensagem" style="width: 100%;" required></textarea>
     </div>
     <input type="submit" value="Enviar" style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
