--- a/views/home.mustache
+++ b/views/home.mustache
@@ -20,30 +20,29 @@
   <header>
     <nav>
       <div class="nav-container">
-       <a class="texto-mid-page" href="/"><div class="img-logo"></div></a>
-        
+        <div class="img-logo"></div>
         <div class="div-links">
             <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
             <a class="texto-mid-page" href="/pets">Pets</a>
             <a class="texto-mid-page" href="/perfil">Perfil</a>
-            <a style="background-color:red; width: 10%; height: 1%" class="texto-mid-page" href="/logout">Sair</a>
+            <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
   </header>
 
-  <div class="color-palette">
-    <div class="color" style="background-color: #8B4513;"></div>
-    <div class="color" style="background-color: #A0522D;"></div>
-    <div class="color" style="background-color: #D2691E;"></div>
-    <div class="color" style="background-color: #CD853F;"></div>
-    <div class="color" style="background-color: #8B7355;"></div>
-</div>
-  
-
   <footer>
-    <a class="texto-end-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-  </footer>
+    <div id="div-footer"> 
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/sobre">Sobre</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/contato">Contato</a>
+   </div>
+    
+   </footer>
 
 </body>
 
