--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,7 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
   }
 
   .container {
@@ -71,6 +77,13 @@ body {
   display: flex;
   margin-top: 20px;
   justify-content: center;
+}
+
+.btn-entrar{
+  display: block; 
+  margin: 0 auto; 
+  background-color: #A0522D;  
+  border-radius: 20px;
 }
 
 
