--- a/views/login.mustache
+++ b/views/login.mustache
@@ -26,7 +26,7 @@
           <label for="password">Senha:</label>
           <input type="password" id="senha" name="senha" >
           <br>
-          <input id='btn-entrar' type="submit" value="Entrar" style="display: block; margin: 0 auto; background-color: #A0522D;  border-radius: 20px;">
+          <input type="submit" value="Entrar" class="btn-entrar">
         </form>
         <a class ="criarConta" href="/criarConta">Criar conta</a>
       </section>
