ajustes telas pós login

--- a/views/contato.mustache
+++ b/views/contato.mustache
@@ -22,10 +22,10 @@
       <div class="nav-container">
         <div class="img-logo"></div>
         <div class="div-links">
-            <a class="texto-mid-page" href="/home">Home</a>
-            <a class="texto-mid-page" href="/sobre">Sobre</a>
-            <a class="texto-mid-page" href="/tecnologias">Tecnologias</a>
-            <a class="texto-mid-page" href="/contato">Contato</a>
+            <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
+            <a class="texto-mid-page" href="/pets">Pets</a>
+            <a class="texto-mid-page" href="/perfil">Perfil</a>
+            <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
