--- a/views/criarConta.mustache
+++ b/views/criarConta.mustache
@@ -44,11 +44,11 @@
     </div>
     <div style="margin-bottom: 10px;">
       <label for="assunto">Senha:</label>
-      <input type="text" id="senha" name="senha" style="width: 100%;" required>
+      <input type="password" id="senha" name="senha" style="width: 100%;" required>
     </div>
     <div style="margin-bottom: 10px;">
       <label for="mensagem">Confirme sua senha:</label>
-      <textarea id="mensagem" name="mensagem" style="width: 100%;" required></textarea>
+      <input type="password" id="mensagem" name="mensagem" style="width: 100%;" required>
     </div>
     <input type="submit" value="Enviar" style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
   </form>
