--- a/public/stylesheets/contato.css
+++ b/public/stylesheets/contato.css
@@ -23,6 +23,20 @@ body {
 
 }
 
+.div-links {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  
+  .div-links a:last-child {
+    width: auto;
+  }
+  
+  .div-links a {
+    margin-right: 70px;
+  }
+
 .img-logo {
     background-image: url("../images/logo-header.png");
     background-repeat: no-repeat;
@@ -39,9 +53,8 @@ header {
 }
 
 nav a {
-    
     display: inline;
-    margin-right: 60px;
+    margin-right: 10px;
     color: #ffffff;
     text-decoration: none;
 }
@@ -52,17 +65,6 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.color-palette {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-}
-
-.color {
-    width: 100px;
-    height: 100px;
 }
 
 #formtitle{
