--- a/public/stylesheets/sobre.css
+++ b/public/stylesheets/sobre.css
@@ -20,32 +20,46 @@ body {
 
 
 .nav-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
 }
-  .img-logo {
-    background-image: url("../images/logo-header.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 100px;
-    height: 80px;
-  }
-  
-  header {
-    background-color: #8B4513;
-    color: #fff;
-    height: 80px;
-    border-bottom: #000000 solid 3px;
+
+.div-links {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.div-links a:last-child {
+  width: auto;
+}
+
+.div-links a {
+  margin-right: 70px;
+}
+
+.img-logo {
+  background-image: url("../images/logo-header.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100px;
+  height: 80px;
+}
+
+header {
+  background-color: #8B4513;
+  color: #fff;
+  height: 80px;
+  border-bottom: #000000 solid 3px;
 }
 
 nav a {
-    
-    display: inline;
-    margin-right: 60px;
-    color: #ffffff;
-    text-decoration: none;
+  display: inline;
+  margin-right: 10px;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .container {
