--- a/views/contato.mustache
+++ b/views/contato.mustache
@@ -20,7 +20,9 @@
   <header>
     <nav>
       <div class="nav-container">
-        <div class="img-logo"></div>
+        <div class="img-logo">
+          <a href="/home"><img class="img-logo" src="/images/logo-header.png" alt="Logo"></a>
+        </div>
         <div class="div-links">
             <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
             <a class="texto-mid-page" href="/pets">Pets</a>
