--- a/views/criarConta.mustache
+++ b/views/criarConta.mustache
@@ -20,20 +20,18 @@
   <header>
     <nav>
       <div class="nav-container">
-        <div class="img-logo"></div>
+        <div class="img-logo">
+        </div>
         <div class="div-links">
-            <a class="texto-mid-page" href="/home">Home</a>
-            <a class="texto-mid-page" href="/sobre">Sobre</a>
-            <a class="texto-mid-page" href="/tecnologias">Tecnologias</a>
-            <a class="texto-mid-page" href="/contato">Contato</a>
         </div>
       </div>
     </nav>
   </header>
 
  <section class="container-formulario">
-   <h2 id="formtitle">Cadastrar</h2>
-  <form action="/login/novoColaborador" method="POST" style="max-width: 400px; margin: 0 auto;">
+  
+  <form action="/login/novoColaborador" method="POST">
+    <h2 id="formtitle">Cadastrar</h2>
     <div style="margin-bottom: 10px;">
       <label for="nome">Nome:</label>
       <input type="text" id="nome" name="nome" style="width: 100%;" required>
@@ -57,13 +55,6 @@
 
 <footer>
   <div id="div-footer"> 
-    <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-   <span style = "margin: 0 5px">|</span>
-   <a class="texto-end2-page" href="/sobre">Sobre</a>
-   <span style = "margin: 0 5px">|</span>
-   <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-   <span style = "margin: 0 5px">|</span>
-   <a class="texto-end2-page" href="/contato">Contato</a>
  </div>
  </footer>
 
