--- a/public/stylesheets/criarconta.css
+++ b/public/stylesheets/criarconta.css
@@ -16,36 +16,43 @@ body {
     background-color: #F1DEC9
 }
 
-
-
-
 .nav-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
 
 }
+
+.div-links {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
   
-  .img-logo {
-    background-image: url("../images/logo-header.png");
-    background-repeat: no-repeat;
+  .div-links a:last-child {
+    width: auto;
+  }
+  
+  .div-links a {
+    margin-right: 70px;
+  }
+
+.img-logo {
     background-size: contain;
     width: 100px;
     height: 80px;
-  }
+}
   
-  header {
+header {
     background-color: #8B4513;
     color: #fff;
     height: 80px;
     border-bottom: #000000 solid 3px;
 }
 
-
 nav a {
-    
     display: inline;
-    margin-right: 60px;
+    margin-right: 10px;
     color: #ffffff;
     text-decoration: none;
 }
@@ -53,18 +60,9 @@ nav a {
 section {
     text-align: center;
     margin: 20px;
-
-}
-
-.color-palette {
     display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-}
-
-.color {
-    width: 100px;
-    height: 100px;
+    justify-content: center;
+    align-items: center;
 }
 
 #formtitle{
@@ -72,17 +70,19 @@ section {
 }
 
 .container-formulario {
-    display:flex;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 60px;
     background-color: #f2f2f2;
     width: 300px;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
     border-radius: 10px;
-    border: #000000 solid 2px; 
-}
-
+    border: #000000 solid 2px;
+    margin: 0 auto;
+    margin-top: 8%;
+  }
+  
+  
 .container-formulario h2 {
     margin-top: 0;
 }
@@ -104,7 +104,7 @@ section {
 }
 
 .container-formulario input[type="submit"] {
-    background-color: #333;
+    background-color: #A0522D;  
     color: #fff;
     padding: 5px 10px;
     cursor: pointer;
@@ -130,70 +130,3 @@ footer {
      align-items: center;
      justify-content: center; 
 }
-
-.texto-mid-page{
-    text-align: center;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-}
-
-span{
-    margin: 0 5px;
-    color: #000000;
-}
-
-.texto-mid-page:hover{
-    color: rgb(0, 0, 0);
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
-}
-
-.texto-end1-page{
-    text-align: center;
-    color: white;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    text-decoration: none;
-    display: inline-block;
-}
-
-.texto-end2-page{
-    text-align: center;
-    color: white;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    text-decoration: none;
-    display: inline-block;
-}
-
-
-.texto-end2-page:hover{
-    color: rgb(0, 0, 0);
-}
-
-#btn-sair {
-    background-color: red;
-    width: 80px;
-    text-align: center;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-  }
