--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -29,7 +29,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
+    /* background-color: rgba(255, 255, 255, 0.4); */
     z-index: -1;
   }
 
@@ -55,8 +55,6 @@ body {
   }
 
 .img-logo {
-    background-image: url("../images/logo-header.png");
-    background-repeat: no-repeat;
     background-size: contain;
     width: 100px;
     height: 80px;
