--- a/views/editarAgendamento.mustache
+++ b/views/editarAgendamento.mustache
@@ -14,20 +14,21 @@
 
 <body>
 
-    <header>
-        <nav>
-          <div class="nav-container">
-           <a class="texto-mid-page" href="/"><div class="img-logo"></div></a>
-            
-            <div class="div-links">
-                <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
-                <a class="texto-mid-page" href="/pets">Pets</a>
-                <a class="texto-mid-page" href="/perfil">Perfil</a>
-                <a style="background-color:red; width: 10%; height: 1%" class="texto-mid-page" href="/logout">Sair</a>
-            </div>
-          </div>
-        </nav>
-      </header>
+  <header>
+    <nav>
+      <div class="nav-container">
+        <div class="img-logo">
+          <a href="/home"><img class="img-logo" src="/images/logo-header.png" alt="Logo"></a>
+        </div>
+        <div class="div-links">
+            <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
+            <a class="texto-mid-page" href="/pets">Pets</a>
+            <a class="texto-mid-page" href="/perfil">Perfil</a>
+            <a id="btn-sair" href="/logout">Sair</a>
+        </div>
+      </div>
+    </nav>
+  </header>
     
 
       
