--- a/views/home.mustache
+++ b/views/home.mustache
@@ -20,7 +20,9 @@
   <header>
     <nav>
       <div class="nav-container">
-        <div class="img-logo"></div>
+        <div class="img-logo">
+          <a href="/home"><img class="img-logo" src="/images/logo-header.png" alt="Logo"></a>
+        </div>
         <div class="div-links">
             <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
             <a class="texto-mid-page" href="/pets">Pets</a>
@@ -31,6 +33,7 @@
     </nav>
   </header>
 
+  
   <footer>
     <div id="div-footer"> 
       <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
