--- a/views/tecnologias.mustache
+++ b/views/tecnologias.mustache
@@ -15,10 +15,13 @@
 </style>
 
 <body>
+  
   <header>
     <nav>
       <div class="nav-container">
-        <div class="img-logo"></div>
+        <div class="img-logo">
+          <a href="/home"><img class="img-logo" src="/images/logo-header.png" alt="Logo"></a>
+        </div>
         <div class="div-links">
             <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
             <a class="texto-mid-page" href="/pets">Pets</a>
