--- a/views/Agendamentos.mustache
+++ b/views/Agendamentos.mustache
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agendamentos</title>
-    <link rel="icon" href="/images/logo-header.png" type="image/x-icon">
+    <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
     <link rel="stylesheet" href="/stylesheets/agendamentos.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
