add crud pet + tbl pagination

--- a/views/Pets.mustache
+++ b/views/Pets.mustache
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets</title>
-    <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
-    <link rel="stylesheet" href="/stylesheets/pets.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </head>
-  
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pets</title>
+  <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
+  <link rel="stylesheet" href="/stylesheets/pets.css" />
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+</head>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+</style>
 
 <body>
 
@@ -22,26 +24,88 @@
           <a href="/home"><img class="img-logo" src="/images/logo-header.png" alt="Logo"></a>
         </div>
         <div class="div-links">
-            <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
-            <a class="texto-mid-page" href="/pets">Pets</a>
-            <a class="texto-mid-page" href="/perfil">Perfil</a>
-            <a id="btn-sair" href="/logout">Sair</a>
+          <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
+          <a class="texto-mid-page" href="/pets">Pets</a>
+          <a class="texto-mid-page" href="/perfil">Perfil</a>
+          <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
   </header>
-    
-      <footer>
-        <div id="div-footer"> 
-          <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/sobre">Sobre</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/contato">Contato</a>
-       </div>
-       </footer>
-    
+
+  <section id="lista-pets" class="container">
+    <table class="table" id="myTable">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col" style="width: 7%;">ID</th>
+          <th scope="col">Nome</th>
+          <th scope="col">Idade</th>
+          <th scope="col">Porte</th>
+          <th scope="col">Tipo</th>
+          <th scope="col">Peso</th>
+        </tr>
+      </thead>
+      <tbody id="tabela-pets">
+        {{#pets}}
+        <tr class="pet">
+          <td class="id">{{_id}}</td>
+          <td class="nome">{{nome}}</td>
+          <td class="idade">{{idade}}</td>
+          <td class="porte">{{porte}}</td>
+          <td class="tipo">{{tipo}}</td>
+          <td class="peso">{{peso}}</td>
+          <td><button class="btn-editar" onclick="editarProduto('{{_id}}', '{{nome}}')">editar</button></td>
+          <td><button class="btn-excluir" onclick="excluirProduto('{{_id}}', '{{nome}}')">excluir</button></td>
+        </tr>
+        {{/pets}}
+      </tbody>
+    </table>
+
+    <form action="/pets/criarPet" method="GET">
+      <button type="submit" class="btn btn-primary">Cadastrar</button>
+    </form>
+  </section>
+
+
+  <footer>
+    <div id="div-footer">
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/"
+        target="_blank">@Petweb</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/sobre">Sobre</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/contato">Contato</a>
+    </div>
+  </footer>
+
+  <script src="../public/javascripts/petFunctions.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap4.min.js"></script>
+
+  <script>
+    $(document).ready(function () {
+      $('#myTable').DataTable({
+        "lengthMenu": [1, 5, 10, 25, 50],
+        "language": {
+          "lengthMenu": "_MENU_ registros por página",
+          "zeroRecords": "Nenhum registro encontrado",
+          "info": "Página _PAGE_ de _PAGES_",
+          "infoEmpty": "Nenhum registro disponível",
+          "infoFiltered": "(filtrado de _MAX_ registros no total)",
+          "search": "Buscar",
+          "paginate": {
+            "first": "Primeiro",
+            "last": "Último",
+            "next": "Próximo",
+            "previous": "Anterior"
+          }
+        }
+      });
+    });
+  </script>
 </body>
+
 </html>
