--- a/public/stylesheets/criarPet.css
+++ b/public/stylesheets/criarPet.css
@@ -71,18 +71,8 @@ section {
 
 }
 
-.color-palette {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-}
 
-.color {
-    width: 100px;
-    height: 100px;
-}
-
-#formtitle{
+/* #formtitle{
     margin-bottom: 20px;
 }
 
@@ -126,7 +116,53 @@ section {
     width: 200px;
     font-size: 16px;
   
-}
+} */
+
+.container-formulario {
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    padding: 20px;
+    width: 300px;
+    margin: 0 auto;
+  }
+  
+  #formtitle {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .container-formulario label,
+  .container-formulario input[type="text"],
+  .container-formulario input[type="email"],
+  .container-formulario input[type="password"],
+  .container-formulario input[type="submit"] {
+    display: block;
+    margin-bottom: 10px;
+    width: 100%;
+  }
+  
+  .container-formulario input[type="text"],
+  .container-formulario input[type="email"],
+  .container-formulario input[type="password"] {
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+  }
+  
+  .container-formulario input[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .container-formulario input[type="submit"]:hover {
+    background-color: #555;
+  }
+  
 
 footer {
     height: 30px;
