--- a/public/stylesheets/pets.css
+++ b/public/stylesheets/pets.css
@@ -20,6 +20,13 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
   }
+
+  #lista-pets {
+    max-width: 1200px;
+    width: 100%;
+    margin-top: 150px;
+  }
+  
   
   body::after {
     content: "";
@@ -29,7 +36,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.5);
     z-index: -1;
   }
 
