--- a/views/Agendamentos.mustache
+++ b/views/Agendamentos.mustache
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agendamentos</title>
-    <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
-    <link rel="stylesheet" href="/stylesheets/agendamentos.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </head>
-  
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Agendamentos</title>
+  <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
+  <link rel="stylesheet" href="/stylesheets/agendamentos.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+</style>
 
 <body>
 
- 
+
   <header>
     <nav>
       <div class="nav-container">
@@ -23,29 +24,28 @@
           <a href="/home"><img class="img-logo" src="/images/logo-header.png" alt="Logo"></a>
         </div>
         <div class="div-links">
-            <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
-            <a class="texto-mid-page" href="/pets">Pets</a>
-            <a class="texto-mid-page" href="/perfil">Perfil</a>
-            <a id="btn-sair" href="/logout">Sair</a>
+          <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
+          <a class="texto-mid-page" href="/pets">Pets</a>
+          <a class="texto-mid-page" href="/perfil">Perfil</a>
+          <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
   </header>
-    
 
-      
-    
-      <footer>
-        <div id="div-footer"> 
-          <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/sobre">Sobre</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/contato">Contato</a>
-       </div>
-       </footer>
-    
+  <footer>
+    <div id="div-footer">
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/"
+        target="_blank">@Petweb</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/sobre">Sobre</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/contato">Contato</a>
+    </div>
+  </footer>
+
 </body>
+
 </html>
