--- a/views/criarPet.mustache
+++ b/views/criarPet.mustache
@@ -30,7 +30,22 @@
     </nav>
   </header>
     
-
+  <section class="container-formulario">
+    <h2 id="formtitle">Inserir Pet</h2>
+    <form action="/pets/" method="POST">
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" name="nome" required>
+      <label for="idade">Idade:</label>
+      <input type="number" id="idade" name="idade" required>
+      <label for="porte">Porte:</label>
+      <input type="text" id="porte" name="porte" required>
+      <label for="tipo">Tipo:</label>
+      <input type="text" id="tipo" name="tipo" required>
+      <label for="peso">Peso:</label>
+      <input type="number" id="peso" name="peso" required>
+      <input type="submit" value="Cadastrar" class="btn-cadastrar">
+    </form>
+  </section>
     
       <footer>
         <div id="div-footer"> 
