--- a/public/stylesheets/pets.css
+++ b/public/stylesheets/pets.css
@@ -166,3 +166,33 @@ span{
     display: inline-block;
   }
   
+  .btn-excluir {
+    background-color: #8b0000;
+    color: white;
+    width: 80px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 15px;
+  }
+  
+  .btn-editar {
+    width: 80px;
+
+    background-color: #000000;
+    color: white;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 15px;
+  }
+
+  .btn-extrair-pdf {
+    display: block;
+    margin: 0 auto;
+    background-color: #1d4ed5;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 15px;
+  }
