--- a/public/stylesheets/criarAgendamento.css
+++ b/public/stylesheets/criarAgendamento.css
@@ -10,45 +10,10 @@ html {
 }
 
 body {
-    align-items: center;
-    justify-content: center;
-    background-image: url("../images/paw.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-}
-
-body::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.4); 
-    z-index: -1;
-}
-
-  
-  .img-logo {
-    background-size: contain;
-    width: 100px;
-    height: 80px;
-  }
-  
-  header {
-    background-color: #8B4513;
-    color: #fff;
-    height: 80px;
-    border-bottom: #000000 solid 3px;
-}
-
-.div-links{
-    width: 36%;
+    background-color: #F1DEC9
 }
 
 .nav-container{
@@ -58,9 +23,36 @@ body::after {
 
 }
 
+.div-links {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  
+  .div-links a:last-child {
+    width: auto;
+  }
+  
+  .div-links a {
+    margin-right: 70px;
+  }
+
+.img-logo {
+    background-size: contain;
+    width: 100px;
+    height: 80px;
+}
+  
+header {
+    background-color: #8B4513;
+    color: #fff;
+    height: 80px;
+    border-bottom: #000000 solid 3px;
+}
+
 nav a {
     display: inline;
-    margin-right: 60px;
+    margin-right: 10px;
     color: #ffffff;
     text-decoration: none;
 }
@@ -68,18 +60,9 @@ nav a {
 section {
     text-align: center;
     margin: 20px;
-
-}
-
-.color-palette {
     display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-}
-
-.color {
-    width: 100px;
-    height: 100px;
+    justify-content: center;
+    align-items: center;
 }
 
 #formtitle{
@@ -87,17 +70,19 @@ section {
 }
 
 .container-formulario {
-    display:flex;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 60px;
     background-color: #f2f2f2;
     width: 300px;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
     border-radius: 10px;
-    border: #000000 solid 3px; 
-}
-
+    border: #000000 solid 2px;
+    margin: 0 auto;
+    margin-top: 8%;
+  }
+  
+  
 .container-formulario h2 {
     margin-top: 0;
 }
@@ -119,7 +104,7 @@ section {
 }
 
 .container-formulario input[type="submit"] {
-    background-color: #333;
+    background-color: #A0522D;  
     color: #fff;
     padding: 5px 10px;
     cursor: pointer;
