--- a/views/criarConta.mustache
+++ b/views/criarConta.mustache
@@ -30,7 +30,7 @@
 
  <section class="container-formulario">
   
-  <form action="/login/novoColaborador" method="POST">
+  <form action="/colaboradores/novoColaborador" method="POST">
     <h2 id="formtitle">Cadastrar</h2>
     <div style="margin-bottom: 10px;">
       <label for="nome">Nome:</label>
