--- a/views/editarPet.mustache
+++ b/views/editarPet.mustache
@@ -18,12 +18,12 @@
     <nav>
       <div class="nav-container">
         <div class="img-logo">
-          <a href="/home"><img class="img-logo" src="/images/logo-header.png" alt="Logo"></a>
+          <a href="/agendamentos/agendamentos"><img class="img-logo" src="/images/logo-header.png" alt="Logo"></a>
         </div>
         <div class="div-links">
-            <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
-            <a class="texto-mid-page" href="/pets">Pets</a>
-            <a class="texto-mid-page" href="/perfil">Perfil</a>
+          <a class="texto-mid-page" href="/agendamentos/agendamentos">Agendamentos</a>
+          <a class="texto-mid-page" href="/pets/pets">Pets</a>
+          <a class="texto-mid-page" href="/colaboradores/telaEditar">Perfil</a>
             <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
