--- a/views/login.mustache
+++ b/views/login.mustache
@@ -19,7 +19,7 @@
     <div class="right-section">
       <section class="container-formulario">
         <h2 id="formtitle">Login</h2>
-        <form action="/login/loginColaborador" method="POST">
+        <form action="/colaboradores/loginColaborador" method="POST">
           <label for="username">Email:</label>
           <input type="text" id="email" name="email" >
           <br>
@@ -28,7 +28,7 @@
           <br>
           <input type="submit" value="Entrar" class="btn-entrar">        
         </form>
-        <a class ="criarConta" href="/criarConta">Criar conta</a>
+        <a class ="criarConta" href="/colaboradores/criarConta">Criar conta</a>
       </section>
     </div>
   </div>
