--- a/views/Pets.mustache
+++ b/views/Pets.mustache
@@ -14,6 +14,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.16/jspdf.plugin.autotable.min.js"></script>
+<script src="../javascripts/petFunctions.js"></script>
+
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 </style>
@@ -24,12 +26,12 @@
     <nav>
       <div class="nav-container">
         <div class="img-logo">
-          <a href="/home"><img class="img-logo" src="/images/logo-header.png" alt="Logo"></a>
+          <a href="/agendamentos/agendamentos"><img class="img-logo" src="/images/logo-header.png" alt="Logo"></a>
         </div>
         <div class="div-links">
-          <a class="texto-mid-page" href="/agendamentos">Agendamentos</a>
-          <a class="texto-mid-page" href="/pets">Pets</a>
-          <a class="texto-mid-page" href="/perfil">Perfil</a>
+          <a class="texto-mid-page" href="/agendamentos/agendamentos">Agendamentos</a>
+          <a class="texto-mid-page" href="/pets/pets">Pets</a>
+          <a class="texto-mid-page" href="/colaboradores/telaEditar">Perfil</a>
           <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
@@ -87,7 +89,6 @@
     </div>
   </footer>
 
-  <script src="../javascripts/petFunctions.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap4.min.js"></script>
@@ -95,7 +96,7 @@
   <script>
     $(document).ready(function () {
       $('#myTable').DataTable({
-        "lengthMenu": [1, 5, 10, 25, 50],
+        "lengthMenu": [5, 10, 25, 50],
         "language": {
           "lengthMenu": "_MENU_ registros por página",
           "zeroRecords": "Nenhum registro encontrado",
