--- a/views/editarConta.mustache
+++ b/views/editarConta.mustache
@@ -33,7 +33,7 @@
     
   <section class="container-formulario">
     
-    <form action="/perfil/editarConta" method="POST">
+    <form action="/colaboradores/editarConta" method="POST">
       <h2 id="formtitle">Cadastrar</h2>
       <div style="margin-bottom: 10px;">
         {{#colaborador}}
